--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 body {
+    width: 600px;
+    margin: 0 auto;
+
     background-color: #deb887;
 }
+
 nav ul li {
     display: inline;
-}
-.wrapper-center {
-    width: 800px;
-    margin: auto;
 }
